--- a/scripts/nestedlabs.yml
+++ b/scripts/nestedlabs.yml
@@ -1,8 +1,8 @@
 AVSvCenter:
-  IP: "X.Y.Z.2" # Please enter the URL for AVS vCenter, do not include https:// or any slashes
+  IP: "172.16.0.2" # Please enter the URL for AVS vCenter, do not include https:// or any slashes
   Username: "cloudadmin@vsphere.local" # AVS vCenter Username, should be consistent
-  Password: "passwordvalue" #Enter the password for the cloudadmin@vsphere.local
+  Password: "E!658eaQn&9x" #Enter the password for the cloudadmin@vsphere.local
 AVSNSXT:
-  IP: "X.Y.Z.3" # Please enter the URL for AVS NSX-T Manager, do not include https:// or any slashes
+  IP: "172.16.0.3" # Please enter the URL for AVS NSX-T Manager, do not include https:// or any slashes
   Username: "cloudadmin" # NSX-T Username from the Azure portal
-  Password: "passwordvalue" # #Enter the password for the cloudadmin
+  Password: "4ZT870zx*au-" # #Enter the password for the cloudadmin
